| Bug #24543 | Master node failure during ALLOC_NODE_ID_REQ causes hang in ndb_mgmd | ||
|---|---|---|---|
| Submitted: | 23 Nov 2006 13:53 | Modified: | 6 Dec 2006 12:03 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1, 5.1-wl2325 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[23 Nov 2006 13:53]
Jonas Oreland
[23 Nov 2006 14:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/15758 ChangeSet@1.2330, 2006-11-23 14:34:24+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#24543 Resend if master dies during alloc node id
[23 Nov 2006 14:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/15759 ChangeSet@1.2072, 2006-11-23 14:39:11+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#24543 Resend if master dies during alloc node id recommit in 5.1-wl2325
[6 Dec 2006 12:03]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.14 changelog.
