ndb - bug#24543   Resend if master dies during alloc node id